--- a/src/CoreBundle/Resources/translations/Admin.fr.xlf
+++ b/src/CoreBundle/Resources/translations/Admin.fr.xlf
@@ -101,7 +101,7 @@
 
             <trans-unit id="dashboard.team">
                 <source>Team</source>
-                <target>Equipe</target>
+                <target>Équipe</target>
             </trans-unit>
             <trans-unit id="team.list">
                 <source>Team List</source>
@@ -151,11 +151,11 @@
             </trans-unit>
             <trans-unit id="match.team1">
                 <source>Team1</source>
-                <target>Equipe 1</target>
+                <target>Équipe 1</target>
             </trans-unit>
             <trans-unit id="match.team2">
                 <source>Team2</source>
-                <target>Equipe 2</target>
+                <target>Équipe 2</target>
             </trans-unit>
             <trans-unit id="match.finished">
                 <source>Finished</source>
@@ -164,6 +164,10 @@
             <trans-unit id="match.score">
                 <source>Score</source>
                 <target>Score</target>
+            </trans-unit>
+            <trans-unit id="match.teams">
+                <source>Teams</source>
+                <target>Équipes</target>
             </trans-unit>
 
             <trans-unit id="dashboard.config">
